@@ -1,6 +1,7 @@
 ===========================================================================
 5.5
 
+Fixed: XmlMethodSelector was always run first regardless of its priority
 Added: @BeforeGroups/@AfterGroups can live in classes without @Test methods
 Added: DataProvider can now take an ITestContext parameter
 Fixed: Wasn't parsing <selector-class-name> correctly 
